sniffing demo
